--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,20 @@ html, body {
 	padding: 0;
 }
 
+.container-fluid {
+	margin-top: 5px;
+}
+
 .note {
 	border: 1px solid black;
-	padding: 5px;
+	padding: 8px;
 	margin: 0 auto;
 	margin-top: 10px;
 	border-radius: 6px;
 }
 
 .note .note-id {
-	font-size: 8px;
+	font-size: 10px;
 	float: right;
 }
 
@@ -22,7 +26,8 @@ html, body {
 }
 
 .note .note-text {
-	
+	margin-left: 10px;
+	font-size: 1.1em;
 }
 
 .note .note-tags {
@@ -34,4 +39,13 @@ html, body {
 	background-color: #CE3131;
 	cursor: pointer;
 	margin-top: 5px;
+}
+
+.note .note-tags:hover, .note .note-tags:active, .note .note-tags:focus {
+    border: 1px solid #AB0E0E;
+	background-color: #AB0E0E;
+}
+
+footer {
+	margin-top: 10px;
 }
