Can now add a new note. Place the loading of the notes into a new function which is called on start. Add a loadTags() function to add the checkboxes available to the page. Change the include statements for the database to be required. General styling and markup.

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@ html, body {
 	background-color: #AB0E0E;
 }
 
+.new-note-group {
+	padding: 10px;
+	border: 1px solid #eee;
+	border-radius: 6px;
+	margin-top: 10px;
+}
+
 footer {
 	margin-top: 10px;
 }
