--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,16 @@ html, body {
 
 .container-fluid {
 	margin-top: 5px;
+	width: 75%;
 }
 
 .note {
-	border: 1px solid black;
+	border: 1px solid #ddd;
 	padding: 8px;
 	margin: 0 auto;
 	margin-top: 10px;
 	border-radius: 6px;
+	width: 50%;
 }
 
 .note .note-id {
@@ -54,5 +56,22 @@ html, body {
 }
 
 footer {
-	margin-top: 10px;
+	margin-top: 30px;
+	border-top: 1px solid #ccc;
+}
+
+footer p {
+	margin-top: 20px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+}
+
+@media (max-width: 800px) {
+	.note {
+		width: 100%;
+	}
+	
+	.container-fluid {
+		width: 90%;
+	}
 }
