--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ html, body {
 	margin-top: 10px;
 }
 
+#note-list {
+	margin-top: 30px;
+}
+
 footer {
 	margin-top: 30px;
 	border-top: 1px solid #ccc;
