--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,42 @@ html, body {
 	padding: 0;
 }
 
+h1 span.glyphicon-comment {
+	top: 5px;
+}
+
 .container-fluid {
 	margin-top: 5px;
 	width: 75%;
+}
+
+.validation-error {
+	color: #FF0000;
 }
 
 .note {
 	border: 1px solid #ddd;
 	padding: 8px;
 	margin: 0 auto;
-	margin-top: 10px;
+	margin-top: 14px;
 	border-radius: 6px;
 	width: 50%;
+	background-color: #eee;
+	-webkit-box-shadow: 0px 0px 3px 2px #ddd;
+	-moz-box-shadow: 0px 0px 3px 2px #ddd;
+	-ms-box-shadow: 0px 0px 3px 2px #ddd;
+	-o-box-shadow: 0px 0px 3px 2px #ddd;
+	box-shadow: 0px 0px 3px 2px #ddd;
+}
+
+.note .note-glyphicons {
+	text-align: right;
+	font-size: 1.2em;
+}
+
+.note .note-glyphicons .glyphicon {
+	margin-right: 5px;
+	cursor: pointer;
 }
 
 .note .note-id {
@@ -65,9 +89,15 @@ footer {
 }
 
 footer p {
+	margin: 20px 20px 20px auto;
+}
+
+.text-right {
+	text-align: right;
+}
+
+.top-buffer {
 	margin-top: 20px;
-	margin-right: 20px;
-	margin-bottom: 20px;
 }
 
 @media (max-width: 800px) {
@@ -77,5 +107,10 @@ footer p {
 	
 	.container-fluid {
 		width: 90%;
+	}
+	
+	div.col-sm-6.text-right {
+		text-align: initial;
+		margin-top: 20px;
 	}
 }
