--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ h1 span.glyphicon-comment {
 	border-radius: 6px;
 	width: 50%;
 	background-color: #eee;
+	min-height: 78px;
 	-webkit-box-shadow: 0px 0px 3px 2px #ddd;
 	-moz-box-shadow: 0px 0px 3px 2px #ddd;
 	-ms-box-shadow: 0px 0px 3px 2px #ddd;
@@ -34,6 +35,7 @@ h1 span.glyphicon-comment {
 .note .note-glyphicons {
 	text-align: right;
 	font-size: 1.2em;
+	float: right;
 }
 
 .note .note-glyphicons .glyphicon {
