--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h1 span.glyphicon-comment {
 	border-radius: 6px;
 	width: 50%;
 	background-color: #eee;
-	min-height: 78px;
+	min-height: 105px;
 	-webkit-box-shadow: 0px 0px 3px 2px #ddd;
 	-moz-box-shadow: 0px 0px 3px 2px #ddd;
 	-ms-box-shadow: 0px 0px 3px 2px #ddd;
@@ -100,6 +100,15 @@ footer p {
 
 .top-buffer {
 	margin-top: 20px;
+}
+
+span.login-link {
+	margin-right: 10px;
+}
+
+span.login-link, span.register-link {
+	text-decoration: underline;
+	cursor: pointer
 }
 
 @media (max-width: 800px) {
