Header and footer now in their own files, with additional markup which is shared with other pages.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,9 @@
-<footer>
-	<p class="pull-right">
-		&copy; Luke Cahill
-	</p>
-</footer>
+	</div> 
+	<!-- Close the div container which is opened in the header.html -->
+		<footer>
+			<p class="pull-right">
+				&copy; Luke Cahill
+			</p>
+		</footer>
+	</body>
+</html>
