Add the note ID to edit to the modal. Remove the un-used button.

--- a/templates/modals/edit-note.html
+++ b/templates/modals/edit-note.html
@@ -47,16 +47,12 @@
 						</h5>
 					</div>
 				</div>
-				<button class="btn btn-success" id="edit-note-button">
-					<span class="glyphicon glyphicon-plus"></span>
-					Add Note
-				</button>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">
 					Close
 				</button>
-				<button type="button" class="btn btn-primary">
+				<button type="button" class="btn btn-primary" id="save-note-button" data-id="0">
 					Save changes
 				</button>
 			</div>
