--- a/css/style.css
+++ b/css/style.css
@@ -65,16 +65,55 @@ h1 span.glyphicon-comment {
 .note .note-tags {
 	padding: 3px;
     border-radius: 6px;
-    border: 1px solid #CE3131;
     margin: 2px;
-	color: white;
-	background-color: #CE3131;
+	color: #fff;
 	cursor: pointer;
 	margin-top: 5px;
 }
 
-.note .note-tags:hover, .note .note-tags:active, .note .note-tags:focus {
-    border: 1px solid #AB0E0E;
+.note .note-tags-red {
+	border: 1px solid #CE3131;
+	background-color: #CE3131;
+}
+
+.note .note-tags-yellow {
+	border: 1px solid #DCE046;
+	background-color: #DCE046;
+	color: #000;
+}
+
+.note .note-tags-green {
+	border: 1px solid #3C763D;
+	background-color: #3C763D;
+}
+
+.note .note-tags-black {
+	border: 1px solid #000;
+	background-color: #000;
+}
+
+.note .note-tags-blue {
+	border: 1px solid #337ab7;
+	background-color: #337ab7;
+}
+
+.note .note-tags-yellow:hover, .note .note-tags-yellow:active, .note .note-tags-yellow:focus {
+	border: 1px solid #BDC10B;
+	background-color: #BDC10B;
+}
+
+.note .note-tags-blue:hover, .note .note-tags-blue:active, .note .note-tags-blue:focus {
+	border: 1px solid #0362B3;
+	background-color: #0362B3;
+}
+
+.note .note-tags-green:hover, .note .note-tags-green:active, .note .note-tags-green:focus {
+	border: 1px solid #226923;
+	background-color: #226923;
+}
+
+.note .note-tags-red:hover, .note .note-tags-red:active, .note .note-tags-red:focus {
+	border: 1px solid #AB0E0E;
 	background-color: #AB0E0E;
 }
 
@@ -138,7 +177,7 @@ span.login-link, span.register-link {
 	cursor: pointer;
 }
 
-#change-password-form {
+#change-password-form, .options-tag-color {
 	padding: 10px;
 	border: 1px solid #eee;
 	border-radius: 6px;
