--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,11 @@ h1 span.glyphicon-comment {
 	background-color: #AB0E0E;
 }
 
+.note .note-tags-black:hover, .note .note-tags-black:active, .note .note-tags-black:focus {
+	border: 1px solid #6B6B6B;
+	background-color: #6B6B6B;
+}
+
 .new-note-group {
 	padding: 10px;
 	border: 1px solid #eee;
@@ -161,6 +166,7 @@ span.login-link, span.register-link {
 .jumbotron {
 	padding-top: 30px;
 	padding-bottom: 30px; 
+	margin-bottom: 10px;
 }
 
 #close-new-note {
@@ -186,6 +192,22 @@ span.login-link, span.register-link {
 
 label[for=tag-chooser] {
 	margin-top: 10px;
+}
+
+.site-menu {
+	padding: 6px;
+	border: 1px solid #eee;
+	border-radius: 6px;
+}
+
+.site-menu a {
+	padding: 5px;
+}
+
+.site-menu a:hover, .site-menu a:focus, .site-menu a:active {
+	padding: 5px;
+	border-radius: 6px;
+	background-color: #eee;
 }
 
 @media (max-width: 800px) {
