Change the tag colors

--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,8 @@ h1 span.glyphicon-comment {
 }
 
 .note .note-tags-green {
-	border: 1px solid #3C763D;
-	background-color: #3C763D;
+	border: 1px solid #458646;
+	background-color: #458646;
 }
 
 .note .note-tags-black {
