--- a/templates/color-select.html
+++ b/templates/color-select.html
@@ -1,17 +1,28 @@
-<select id="select-tag-color" class="form-control">
-	<option value="blue">
-		Blue
-	</option>
-	<option value="red">
-		Red
-	</option>
-	<option value="green">
-		Green
-	</option>
-	<option value="yellow">
-		Yellow
-	</option>
-	<option value="black">
-		Black
-	</option>
-</select>
+<div class="options-tag-color">
+	<h4>
+		Change the color of the note tags.
+	</h4>
+	<div class="form-group">
+		<select id="select-tag-color" class="form-control">
+			<option value="blue">
+				Blue
+			</option>
+			<option value="red">
+				Red
+			</option>
+			<option value="green">
+				Green
+			</option>
+			<option value="yellow">
+				Yellow
+			</option>
+			<option value="black">
+				Black
+			</option>
+		</select>
+	</div>
+	<button class="btn btn-success" id="tag-color-button">
+		<span class="glyphicon glyphicon-pencil"></span>
+		Change color
+	</button>
+</div>
