Add link to Github repository

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,18 @@
 	</div> 
 	<!-- Close the div container which is opened in the header.html -->
 		<footer>
-			<p class="pull-right">
-				&copy; Luke Cahill
-			</p>
+			<div class="col-xs-6">
+				<p>
+					<a href="https://github.com/lukecahill/note-keeper">
+						Link to Github
+					</a>
+				</p>
+			</div>
+			<div class="col-xs-6">
+				<p class="pull-right">
+					&copy; Luke Cahill
+				</p>
+			</div>
 		</footer>
 	</body>
 </html>
