Fix misspelt input name and corresponding JS/CSS.

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,10 @@ h1 span.glyphicon-comment {
 	margin-top: 10px;
 }
 
+#search-input {
+	margin-top: 10px;
+}
+
 #note-list {
 	margin-top: 30px;
 }
