--- a/templates/search.html
+++ b/templates/search.html
@@ -1,10 +1,7 @@
-<div class="col-sm-12" id="seach-input">
+<div class="col-md-12" id="search-input">
 	<div class="form-group">
-		<label for="search-note-text">
-			Enter a note title to seach for.
-		</label>
 		<div class="input-group">
-			<input type="text" id="search-note-text" class="form-control">
+			<input type="text" id="search-note-text" class="form-control" placeholder="Enter a note title to seach for...">
 			<span class="input-group-btn">
 				<button class="btn btn-success" id="search-note-button">
 				<span class="glyphicon glyphicon-search"></span>
