--- a/templates/new-note.html
+++ b/templates/new-note.html
@@ -1,4 +1,4 @@
-<div class="col-sm-12" id="new-note-section">
+<div class="col-md-12" id="new-note-section">
 	<div class="form-group new-note-group">
 		<span class="new-note-close" id="close-new-note">
 			X
