Change text field to text area

--- a/templates/modals/edit-note.html
+++ b/templates/modals/edit-note.html
@@ -22,7 +22,7 @@
 					<label for="edit-note-title">
 						Note Text
 					</label>
-					<input type="text" id="edit-note-text" required class="form-control">
+					<textarea id="edit-note-text" rows="3" required class="form-control"></textarea>
 					
 					<p class="validation-error edit-note-text-validation">
 						Invalid - Note must contain text!
