--- a/templates/new-note.html
+++ b/templates/new-note.html
@@ -16,7 +16,7 @@
 			<label for="add-note-title">
 				Note Text
 			</label>
-			<input type="text" id="add-note-text" required class="form-control">
+			<textarea id="add-note-text" rows="3" required class="form-control"></textarea>
 			
 			<p class="validation-error note-text-validation">
 				Invalid - Note must contain text!
