Add a border for the different user settings

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ span.login-link, span.register-link {
 	cursor: pointer;
 }
 
-#change-password-form, .options-tag-color {
+.options-border {
 	padding: 10px;
 	border: 1px solid #eee;
 	border-radius: 6px;
