Add the options border to existing tag color choice

--- a/templates/color-select.html
+++ b/templates/color-select.html
@@ -1,4 +1,4 @@
-<div class="options-tag-color">
+<div class="options-tag-color options-border">
 	<h4>
 		Change the color of the note tags.
 	</h4>
