Change the icon of the sort button

--- a/templates/note-order.html
+++ b/templates/note-order.html
@@ -19,7 +19,7 @@
 		</select>
 	</div>
 	<button class="btn btn-success" id="options-order-button">
-		<span class="glyphicon glyphicon-pencil"></span>
+		<span class="glyphicon glyphicon-sort"></span>
 		Change order
 	</button>
 </div>
