Add a title to the search note input

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,8 @@
 <div class="col-md-12" id="search-input">
 	<div class="form-group">
+		<label for="search-note-text">
+			Enter something to search for
+		</label>
 		<div class="input-group">
 			<input type="text" id="search-note-text" class="form-control" placeholder="Enter a note title to seach for...">
 			<span class="input-group-btn">
