Fix note labels pointing to incorrect input

--- a/templates/new-note.html
+++ b/templates/new-note.html
@@ -13,7 +13,7 @@
 			<input type="text" id="add-note-title" class="form-control">
 		</div>
 		<div class="form-group">
-			<label for="add-note-title">
+			<label for="add-note-text">
 				Note Text
 			</label>
 			<textarea id="add-note-text" rows="3" required class="form-control"></textarea>
@@ -23,7 +23,7 @@
 			</p>
 		</div>
 		<div class="form-group">
-			<label for="add-note-title">
+			<label for="add-new-tag-text">
 				Note Tags - Enter the tag and click 'Add New Tag' to add.
 			</label>
 			<div class="input-group">
