Markup for the new seach completed notes checkbox

--- a/templates/search-options.html
+++ b/templates/search-options.html
@@ -13,6 +13,12 @@
 				<input type="checkbox" value="text"  id="search_text" /> Text
 			</label>
 		</div>
+		
+		<div class="checkbox">
+			<label>
+				<input type="checkbox" value="text"  id="search_mark_done" /> Include notes marked as complete
+			</label>
+		</div>
 	</div>
 	<button class="btn btn-success" id="options-search-button">
 		<span class="glyphicon glyphicon-search"></span>
