Add chevron to indicate to the user to click to show more

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,10 @@ p#first-note, p#no-results {
 	font-weight: bold;
 }
 
+.password_span {
+	float: right;
+}
+
 @media (max-width: 767px) {
 	div.mobile-text-left {
 		text-align: initial;
