--- a/templates/color-select.html
+++ b/templates/color-select.html
@@ -1,28 +1,32 @@
 <div class="options-tag-color options-border">
-	<h4>
+	<h4 id="color-header">
 		Change the color of the note tags.
+		<span class="password_span glyphicon glyphicon-chevron-up">
+		</span>
 	</h4>
-	<div class="form-group">
-		<select id="select-tag-color" class="form-control">
-			<option value="blue">
-				Blue
-			</option>
-			<option value="red">
-				Red
-			</option>
-			<option value="green">
-				Green
-			</option>
-			<option value="yellow">
-				Yellow
-			</option>
-			<option value="black">
-				Black
-			</option>
-		</select>
+	<div id="color-div">
+		<div class="form-group">
+			<select id="select-tag-color" class="form-control">
+				<option value="blue">
+					Blue
+				</option>
+				<option value="red">
+					Red
+				</option>
+				<option value="green">
+					Green
+				</option>
+				<option value="yellow">
+					Yellow
+				</option>
+				<option value="black">
+					Black
+				</option>
+			</select>
+		</div>
+		<button class="btn btn-success" id="tag-color-button">
+			<span class="glyphicon glyphicon-pencil"></span>
+			Change color
+		</button>
 	</div>
-	<button class="btn btn-success" id="tag-color-button">
-		<span class="glyphicon glyphicon-pencil"></span>
-		Change color
-	</button>
 </div>
