--- a/templates/search-options.html
+++ b/templates/search-options.html
@@ -1,27 +1,31 @@
 <div class="options-search options-border">
-	<h4>
+	<h4 id="search-header">
 		Choose how the notes should be searched.
+		<span class="password_span glyphicon glyphicon-chevron-up">
+		</span>
 	</h4>
-	<div class="form-group">
-		<div class="checkbox">
-			<label>
-				<input type="checkbox" value="title" id="search_title" /> Title
-			</label>
+	<div id="search-div">
+		<div class="form-group">
+			<div class="checkbox">
+				<label>
+					<input type="checkbox" value="title" id="search_title" /> Title
+				</label>
+			</div>
+			<div class="checkbox">
+				<label>
+					<input type="checkbox" value="text"  id="search_text" /> Text
+				</label>
+			</div>
+			
+			<div class="checkbox">
+				<label>
+					<input type="checkbox" value="text"  id="search_mark_done" /> Include notes marked as complete
+				</label>
+			</div>
 		</div>
-		<div class="checkbox">
-			<label>
-				<input type="checkbox" value="text"  id="search_text" /> Text
-			</label>
-		</div>
-		
-		<div class="checkbox">
-			<label>
-				<input type="checkbox" value="text"  id="search_mark_done" /> Include notes marked as complete
-			</label>
-		</div>
+		<button class="btn btn-success" id="options-search-button">
+			<span class="glyphicon glyphicon-search"></span>
+			Change search
+		</button>
 	</div>
-	<button class="btn btn-success" id="options-search-button">
-		<span class="glyphicon glyphicon-search"></span>
-		Change search
-	</button>
 </div>
