--- a/css/style.css
+++ b/css/style.css
@@ -236,8 +236,12 @@ p#first-note, p#no-results {
 	font-weight: bold;
 }
 
-.password_span {
+.password_span, .order_dropdown_span, .search_dropdown_span, .color_dropdown_span {
 	float: right;
+}
+
+#password-header, #color-header, #order-header, #search-header {
+	cursor: pointer;
 }
 
 @media (max-width: 767px) {
