Fix incorrect span naming

--- a/templates/color-select.html
+++ b/templates/color-select.html
@@ -1,7 +1,7 @@
 <div class="options-tag-color options-border">
 	<h4 id="color-header">
 		Change the color of the note tags.
-		<span class="password_span glyphicon glyphicon-chevron-up">
+		<span class="color_dropdown_span glyphicon glyphicon-chevron-up">
 		</span>
 	</h4>
 	<div id="color-div">
