--- a/templates/note-order.html
+++ b/templates/note-order.html
@@ -1,7 +1,7 @@
 <div class="options-order options-border">
 	<h4 id="order-header">
 		Change the order of your loaded notes. 
-		<span class="password_span glyphicon glyphicon-chevron-up">
+		<span class="order_dropdown_span glyphicon glyphicon-chevron-up">
 		</span>
 	</h4>
 	<div id="order-div">
@@ -18,6 +18,12 @@
 				</option>
 				<option value="alpha_backwards">
 					Z-A
+				</option>
+				<option value="last_edited">
+					Last edited
+				</option>
+				<option value="oldest_edited">
+					Oldest edited
 				</option>
 			</select>
 		</div>
