--- a/templates/search-options.html
+++ b/templates/search-options.html
@@ -1,7 +1,7 @@
 <div class="options-search options-border">
 	<h4 id="search-header">
 		Choose how the notes should be searched.
-		<span class="password_span glyphicon glyphicon-chevron-up">
+		<span class="search_dropdown_span glyphicon glyphicon-chevron-up">
 		</span>
 	</h4>
 	<div id="search-div">
