--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 html, body {
-	margin: 0;
-	padding: 0;
+	font-family: 'Droid Sans', sans-serif;
 }
 
 h1 span.glyphicon-comment {
@@ -24,16 +23,10 @@ h1 span.glyphicon-comment {
 	border: 1px solid #ddd;
 	padding: 8px;
 	margin: 0 auto;
-	margin-top: 14px;
-	border-radius: 6px;
-	width: 70%;
+	margin-top: 10px;
+	width: 80%;
 	background-color: #eee;
 	min-height: 105px;
-	-webkit-box-shadow: 0px 0px 3px 2px #ddd;
-	-moz-box-shadow: 0px 0px 3px 2px #ddd;
-	-ms-box-shadow: 0px 0px 3px 2px #ddd;
-	-o-box-shadow: 0px 0px 3px 2px #ddd;
-	box-shadow: 0px 0px 3px 2px #ddd;
 }
 
 .note .note-glyphicons {
