--- a/css/style.css
+++ b/css/style.css
@@ -1,269 +1,193 @@
 html, body {
-	font-family: 'Droid Sans', sans-serif;
-}
+  font-family: "Droid Sans", sans-serif; }
 
 h1 span.glyphicon-comment {
-	top: 5px;
-}
+  top: 5px; }
 
 .container-fluid {
-	margin-top: 5px;
-	width: 80%;
-}
+  margin-top: 5px;
+  width: 80%; }
 
 .validation-error {
-	color: #FF0000;
-}
+  color: #FF0000; }
 
 .note-logo {
-	height: 75px;
-}
+  height: 75px; }
 
 .note {
-	border: 1px solid #ddd;
-	padding: 8px;
-	margin: 0 auto;
-	margin-top: 10px;
-	width: 80%;
-	background-color: #eee;
-	min-height: 105px;
-}
-
-.note .note-glyphicons {
-	text-align: right;
-	font-size: 1.2em;
-	float: right;
-}
-.note .note-glyphicons.note-glyphicons-empty {
-	float: none;
-}
-
-.note .note-glyphicons .glyphicon {
-	margin-right: 5px;
-	cursor: pointer;
-}
-
-.note .note-id {
-	font-size: 10px;
-	float: right;
-}
-
-.note .note-title {
-	font-size: 1.4em;
-	font-weight: bold;
-}
-
-.note .note-text {
-	margin-left: 10px;
-	font-size: 1.1em;
-	word-wrap: break-word;
-}
-
-.note .note-tags {
-	display: inline-block;
-	padding: .2em .5em .2em;
-	font-size: 85%;
-	font-weight: 700;
-	line-height: 1;
-	color: #fff;
-	text-align: center;
-	white-space: nowrap;
-	vertical-align: baseline;
+  border: 1px solid #ddd;
+  padding: 8px;
+  margin: 0 auto;
+  margin-top: 10px;
+  width: 80%;
+  background-color: #eee;
+  min-height: 105px; }
+  .note .note-glyphicons {
+    text-align: right;
+    font-size: 1.2em;
+    float: right; }
+  .note .note-glyphicons.note-glyphicons-empty {
+    float: none; }
+  .note .note-glyphicons .glyphicon {
+    margin-right: 5px;
+    cursor: pointer; }
+  .note .note-id {
+    font-size: 10px;
+    float: right; }
+  .note .note-title {
+    font-size: 1.4em;
+    font-weight: bold; }
+  .note .note-text {
+    margin-left: 10px;
+    font-size: 1.1em;
+    word-wrap: break-word; }
+  .note .tag-container {
+    display: inline-block; }
+  .note .note-tags {
+    display: inline-block;
+    padding: .2em .5em .2em;
+    font-size: 85%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
     margin: 2px;
-	cursor: pointer;
-	margin-top: 5px;
-}
-
-.note .note-tags-red {
-	border: 1px solid #CE3131;
-	background-color: #CE3131;
-}
-
-.note .note-tags-yellow {
-	border: 1px solid #DCE046;
-	background-color: #DCE046;
-	color: #000;
-}
-
-.note .note-tags-green {
-	border: 1px solid #458646;
-	background-color: #458646;
-}
-
-.note .note-tags-black {
-	border: 1px solid #000;
-	background-color: #000;
-}
-
-.note .note-tags-blue {
-	border: 1px solid #337ab7;
-	background-color: #337ab7;
-}
-
-.note .note-tags-yellow:hover, .note .note-tags-yellow:active, .note .note-tags-yellow:focus {
-	border: 1px solid #BDC10B;
-	background-color: #BDC10B;
-}
-
-.note .note-tags-blue:hover, .note .note-tags-blue:active, .note .note-tags-blue:focus {
-	border: 1px solid #0362B3;
-	background-color: #0362B3;
-}
-
-.note .note-tags-green:hover, .note .note-tags-green:active, .note .note-tags-green:focus {
-	border: 1px solid #226923;
-	background-color: #226923;
-}
-
-.note .note-tags-red:hover, .note .note-tags-red:active, .note .note-tags-red:focus {
-	border: 1px solid #AB0E0E;
-	background-color: #AB0E0E;
-}
-
-.note .note-tags-black:hover, .note .note-tags-black:active, .note .note-tags-black:focus {
-	border: 1px solid #6B6B6B;
-	background-color: #6B6B6B;
-}
-
-.note .tag-container {
-	display: inline-block;
-}
+    cursor: pointer;
+    margin-top: 5px; }
+  .note .note-tags-red {
+    border: 1px solid #CE3131;
+    background-color: #CE3131; }
+  .note .note-tags-yellow {
+    border: 1px solid #DCE046;
+    background-color: #DCE046;
+    color: #000; }
+  .note .note-tags-green {
+    border: 1px solid #458646;
+    background-color: #458646; }
+  .note .note-tags-black {
+    border: 1px solid #000;
+    background-color: #000; }
+  .note .note-tags-blue {
+    border: 1px solid #337ab7;
+    background-color: #337ab7; }
+  .note .note-tags-yellow:hover, .note .note .note-tags-yellow:active, .note .note .note-tags-yellow:focus {
+    border: 1px solid #BDC10B;
+    background-color: #BDC10B; }
+  .note .note-tags-blue:hover, .note .note .note-tags-blue:active, .note .note .note-tags-blue:focus {
+    border: 1px solid #0362B3;
+    background-color: #0362B3; }
+  .note .note-tags-green:hover, .note .note .note-tags-green:active, .note .note .note-tags-green:focus {
+    border: 1px solid #226923;
+    background-color: #226923; }
+  .note .note-tags-red:hover, .note .note .note-tags-red:active, .note .note .note-tags-red:focus {
+    border: 1px solid #AB0E0E;
+    background-color: #AB0E0E; }
+  .note .note-tags-black:hover, .note .note .note-tags-black:active, .note .note .note-tags-black:focus {
+    border: 1px solid #6B6B6B;
+    background-color: #6B6B6B; }
 
 .new-note-group {
-	padding: 10px;
-	border: 1px solid #eee;
-	/* border-radius: 6px; */
-	margin-top: 10px;
-}
+  padding: 10px;
+  border: 1px solid #eee;
+  /* border-radius: 6px; */
+  margin-top: 10px; }
 
 #search-input {
-	margin-top: 10px;
-}
+  margin-top: 10px; }
 
 #note-list {
-	margin-top: 30px;
-}
+  margin-top: 30px; }
 
 footer {
-	margin-top: 30px;
-	border-top: 1px solid #ccc;
-}
-
-footer p {
-	margin: 20px 20px 20px auto;
-}
+  margin-top: 30px;
+  border-top: 1px solid #ccc; }
+  footer p {
+    margin: 20px 20px 20px auto; }
 
 .text-right {
-	text-align: right;
-}
+  text-align: right; }
 
 .top-buffer {
-	margin-top: 20px;
-}
+  margin-top: 20px; }
 
 span.login-link {
-	margin-right: 10px;
-}
+  margin-right: 10px; }
 
 span.login-link, span.register-link {
-	text-decoration: underline;
-	cursor: pointer
-}
+  text-decoration: underline;
+  cursor: pointer; }
 
 .divider {
-	font-weight: bold;
-}
+  font-weight: bold; }
 
 .jumbotron {
-	padding-top: 30px;
-	padding-bottom: 30px; 
-	margin-bottom: 10px;
-}
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 10px; }
 
 #close-new-note {
-	float: right;
-	font-weight: bold;
-	color: #FF0000;
-	padding: 4px;
-}
+  float: right;
+  font-weight: bold;
+  color: #FF0000;
+  padding: 4px; }
 
 #close-new-note:hover {
-	background-color: #FF0000;
-	color: #FFF;
-	border-radius: 6px;
-	cursor: pointer;
-}
+  background-color: #FF0000;
+  color: #FFF;
+  border-radius: 6px;
+  cursor: pointer; }
 
 .options-border {
-	padding: 10px;
-	border: 1px solid #eee;
-	/* border-radius: 6px; */
-	margin-top: 10px;
-}
+  padding: 10px;
+  border: 1px solid #eee;
+  /* border-radius: 6px; */
+  margin-top: 10px; }
 
 label[for=tag-chooser] {
-	margin-top: 10px;
-}
+  margin-top: 10px; }
 
 .site-menu {
-	padding: 6px;
-	border: 1px solid #eee;
-	border-radius: 6px;
-}
-
-.site-menu a {
-	padding: 5px;
-}
-
-.site-menu a:hover, .site-menu a:focus, .site-menu a:active {
-	padding: 5px;
-	border-radius: 6px;
-	background-color: #eee;
-}
+  padding: 6px;
+  border: 1px solid #eee;
+  border-radius: 6px; }
+  .site-menu a {
+    padding: 5px; }
+  .site-menu a:hover, .site-menu .site-menu a:focus, .site-menu .site-menu a:active {
+    padding: 5px;
+    border-radius: 6px;
+    background-color: #eee; }
 
 .navbar-container {
-	margin-top: 0;
-	border-radius: 0;
-}
+  margin-top: 0;
+  border-radius: 0; }
 
 nav.navigation-bar {
-	border-radius: 0;
-}
+  border-radius: 0; }
 
 p#first-note, p#no-results {
-	text-align: center;
-	font-weight: bold;
-}
+  text-align: center;
+  font-weight: bold; }
 
 .password_span, .order_dropdown_span, .search_dropdown_span, .color_dropdown_span, .recent_ips_span {
-	float: right;
-}
+  float: right; }
 
 #password-header, #color-header, #order-header, #search-header, #recent-ips-header {
-	cursor: pointer;
-}
+  cursor: pointer; }
 
 .btn {
-	border-radius: 0;
-}
+  border-radius: 0; }
 
 @media (max-width: 767px) {
-	div.mobile-text-left {
-		text-align: initial;
-		margin-top: 20px;
-	}
-}
+  div.mobile-text-left {
+    text-align: initial;
+    margin-top: 20px; } }
 
 @media (max-width: 900px) {
-	.note {
-		width: 100%;
-	}
-	
-	.container-fluid {
-		width: 90%;
-	}
-	
-	.note .note-glyphicons {
-		float: initial;
-	}
-}
+  .note {
+    width: 100%; }
+  .container-fluid {
+    width: 90%; }
+  .note .note-glyphicons {
+    float: initial; } }
