--- a/css/style.scss
+++ b/css/style.scss
@@ -118,27 +118,27 @@ h1 span.glyphicon-comment {
 		background-color: $tag-blue;
 	}
 	
-	.note-tags-yellow:hover, .note .note-tags-yellow:active, .note .note-tags-yellow:focus {
+	.note-tags-yellow:hover, .note-tags-yellow:active, .note-tags-yellow:focus {
 		border: 1px solid $yellow-hover;
 		background-color: $yellow-hover;
 	}
 
-	.note-tags-blue:hover, .note .note-tags-blue:active, .note .note-tags-blue:focus {
+	.note-tags-blue:hover, .note-tags-blue:active, .note-tags-blue:focus {
 		border: 1px solid $blue-hover;
 		background-color: $blue-hover;
 	}
 
-	.note-tags-green:hover, .note .note-tags-green:active, .note .note-tags-green:focus {
+	.note-tags-green:hover, .note-tags-green:active, .note-tags-green:focus {
 		border: 1px solid $green-hover;
 		background-color: $green-hover;
 	}
 
-	.note-tags-red:hover, .note .note-tags-red:active, .note .note-tags-red:focus {
+	.note-tags-red:hover, .note-tags-red:active, .note-tags-red:focus {
 		border: 1px solid $red-hover;
 		background-color: $red-hover;
 	}
 
-	.note-tags-black:hover, .note .note-tags-black:active, .note .note-tags-black:focus {
+	.note-tags-black:hover, .note-tags-black:active, .note-tags-black:focus {
 		border: 1px solid $black-hover;
 		background-color: $black-hover;
 	}
