--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,19 @@ p#first-note, p#no-results {
 .btn {
   border-radius: 0; }
 
+.password_reset {
+  background: none !important;
+  border: none;
+  padding: 0 !important;
+  font: inherit;
+  cursor: pointer;
+  color: #337ab7; }
+  .password_reset:hover {
+    text-decoration: underline; }
+
+.password_reset_container {
+  text-align: right; }
+
 @media (max-width: 767px) {
   div.mobile-text-left {
     text-align: initial;
