Update css and scss

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ h1 span.glyphicon-comment {
 .validation-error {
   color: #FF0000; }
 
+.error {
+  color: #FF0000;
+  font-weight: bold; }
+
 .note-logo {
   height: 75px; }
 
