--- a/css/style.scss
+++ b/css/style.scss
@@ -30,6 +30,11 @@ h1 span.glyphicon-comment {
 	color: $red;
 }
 
+.error {
+	color: $red;
+	font-weight: bold;
+}
+
 .note-logo {
 	height: 75px;
 }
