Update css and scss

--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ p#first-note, p#no-results {
 @media (max-width: 900px) {
   .note {
     width: 100%; }
+    .note .note-glyphicons {
+      float: initial; }
   .container-fluid {
-    width: 90%; }
-  .note .note-glyphicons {
-    float: initial; } }
+    width: 90%; } }
