Update scss and CSS with theme headers & span

--- a/css/style.scss
+++ b/css/style.scss
@@ -257,11 +257,11 @@ p {
 	}
 }
 
-.password_span, .order_dropdown_span, .search_dropdown_span, .color_dropdown_span, .recent_ips_span {
+.password_span, .order_dropdown_span, .search_dropdown_span, .color_dropdown_span, .recent_ips_span, .theme_dropdown_span {
 	float: right;
 }
 
-#password-header, #color-header, #order-header, #search-header, #recent-ips-header {
+#password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header {
 	cursor: pointer;
 }
 
