Update scss and CSS

--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,13 @@ p #first-note, p #no-results {
 .password_reset_container {
   text-align: right; }
 
+html.dark-theme body {
+  background-color: #222; }
+
+html.dark-theme .note {
+  border-color: #888;
+  background-color: #8a8a8a; }
+
 @media (max-width: 767px) {
   div.mobile-text-left {
     text-align: initial;
