--- a/css/style.scss
+++ b/css/style.scss
@@ -47,6 +47,7 @@ h1 span.glyphicon-comment {
 	width: 80%;
 	background-color: #eee;
 	min-height: 105px;
+	border-radius: 6px;
 
 	.note-glyphicons {
 		text-align: right;
@@ -94,6 +95,7 @@ h1 span.glyphicon-comment {
 		margin: 2px;
 		cursor: pointer;
 		margin-top: 5px;
+		border-radius: 5px;
 	}
 
 	.note-tags-red {
@@ -151,7 +153,7 @@ h1 span.glyphicon-comment {
 .new-note-group {
 	padding: 10px;
 	border: 1px solid #eee;
-	/* border-radius: 6px; */
+	border-radius: 6px;
 	margin-top: 10px;
 }
 
@@ -217,7 +219,7 @@ span {
 .options-border {
 	padding: 10px;
 	border: 1px solid #eee;
-	/* border-radius: 6px; */
+	border-radius: 6px;
 	margin-top: 10px;
 }
 
@@ -243,11 +245,6 @@ label[for=tag-chooser] {
 
 .navbar-container {
 	margin-top: 0;
-	border-radius: 0;
-}
-
-nav.navigation-bar {
-	border-radius: 0;
 }
 
 p {
@@ -263,10 +260,6 @@ p {
 
 #password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header {
 	cursor: pointer;
-}
-
-.btn {
-	border-radius: 0;
 }
 
 .password_reset {
@@ -294,6 +287,26 @@ html.dark-theme {
 	.note {
 		border-color: #888;
 		background-color: #8a8a8a;
+	}
+
+	.btn-default {
+		background-color: #888;
+		border-color: #888;
+	}
+
+	.btn-success {
+		background-color: #098609;
+		border-color: #098609;
+	}
+
+	.account-dark {
+		color: #888;
+	}
+
+	footer {
+		p {
+			color: #888;
+		}
 	}
 }
 
