Generic float for the chevron in account options. Update all templates to add this. SCSS updated & CSS updated

--- a/css/style.scss
+++ b/css/style.scss
@@ -254,7 +254,7 @@ p {
 	}
 }
 
-.password_span, .order_dropdown_span, .search_dropdown_span, .color_dropdown_span, .recent_ips_span, .theme_dropdown_span, .maps_dropdown_span {
+.span_float_right {
 	float: right;
 }
 
