--- a/templates/account/maps.html
+++ b/templates/account/maps.html
@@ -1,7 +1,7 @@
 <div class="options-order options-border">
 	<h4 id="maps-header">
 		Map of logged in location
-		<span class="maps_dropdown_span glyphicon glyphicon-chevron-up">
+		<span class="maps_dropdown_span span_float_right glyphicon glyphicon-chevron-up">
 		</span>
 	</h4>
 	<div id="maps-div">
