--- a/templates/account/recent-ips.html
+++ b/templates/account/recent-ips.html
@@ -1,7 +1,7 @@
 <div class="options-recent-ips options-border">
 	<h4 id="recent-ips-header">
 		List of most recent IPs this account has been accessed with.
-		<span class="recent_ips_span glyphicon glyphicon-chevron-up">
+		<span class="recent_ips_span span_float_right glyphicon glyphicon-chevron-up">
 		</span>
 	</h4>
 	<div id="recent-ips-div">
