--- a/templates/account/note-order.html
+++ b/templates/account/note-order.html
@@ -1,7 +1,7 @@
 <div class="options-order options-border">
 	<h4 id="order-header">
 		Change the order of your loaded notes. 
-		<span class="order_dropdown_span glyphicon glyphicon-chevron-up">
+		<span class="order_dropdown_span span_float_right glyphicon glyphicon-chevron-up">
 		</span>
 	</h4>
 	<div id="order-div">
