--- a/templates/account/theme.html
+++ b/templates/account/theme.html
@@ -1,7 +1,7 @@
 <div class="options-border">
 	<h4 id="theme-header">
 		Tick the checkbox to use the dark theme
-		<span class="theme_dropdown_span glyphicon glyphicon-chevron-up">
+		<span class="theme_dropdown_span span_float_right glyphicon glyphicon-chevron-up">
 		</span>
 	</h4>
 	<div id="theme-div">
