--- a/css/style.scss
+++ b/css/style.scss
@@ -49,6 +49,10 @@ h1 span.glyphicon-comment {
 	min-height: 105px;
 	border-radius: 6px;
 
+	.glyph-tag-lower {
+		top: 5px;
+	}
+
 	.note-glyphicons {
 		text-align: right;
 		font-size: 1.2em;
@@ -258,7 +262,7 @@ p {
 	float: right;
 }
 
-#password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header {
+#password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header, #share-header, #map-header {
 	cursor: pointer;
 }
 
