Update map style

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ p #first-note, p #no-results {
 .span_float_right {
   float: right; }
 
-#password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header, #share-header, #map-header {
+#password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header, #share-header, #maps-header {
   cursor: pointer; }
 
 .password_reset {
@@ -188,6 +188,11 @@ p #first-note, p #no-results {
   color: #337ab7; }
   .password_reset:hover {
     text-decoration: underline; }
+
+#map_location {
+  height: 350px;
+  width: 350px;
+  margin: 0 auto; }
 
 .password_reset_container {
   text-align: right; }
