--- a/css/style.scss
+++ b/css/style.scss
@@ -206,14 +206,14 @@ span {
 	margin-bottom: 10px;
 }
 
-#close-new-note {
+#close-new-note, #notification-close {
 	float: right;
 	font-weight: bold;
 	color: #FF0000;
 	padding: 4px;
 }
 
-#close-new-note:hover {
+#close-new-note:hover, #notification-close:hover {
 	background-color: #FF0000;
 	color: #FFF;
 	border-radius: 6px;
@@ -283,6 +283,27 @@ p {
 	height: 350px;
 	width: 350px;
 	margin: 0 auto;
+}
+
+.note {
+	border: 1px solid #ddd;
+	padding: 8px;
+	margin: 0 auto;
+	margin-top: 10px;
+	width: 80%;
+	background-color: #eee;
+	min-height: 105px;
+	border-radius: 6px;
+}
+
+#system-notification {
+	border: 1px solid #ddd;
+	padding: 8px;
+	margin: 2% auto;
+	width: 90%;
+	background-color: #eee;
+	min-height: 105px;
+	border-radius: 6px;
 }
 
 .password_reset_container {
