Update button ID Begin adding event handler

--- a/templates/account/share-notes.html
+++ b/templates/account/share-notes.html
@@ -11,7 +11,7 @@
 			</label>
                 <input name="user_email" id="user_email" class="form-control" type="text" /> 
 		</div>
-		<button class="btn btn-success" id="options-order-button">
+		<button class="btn btn-success" id="share-button">
 			<span class="glyphicon glyphicon-send"></span>
 			Share notes
 		</button>
