--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ p #first-note, p #no-results {
 .span_float_right {
   float: right; }
 
-#password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header, #share-header, #maps-header {
+#password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header, #maps-header {
   cursor: pointer; }
 
 .password_reset {
