--- a/css/style.scss
+++ b/css/style.scss
@@ -262,7 +262,7 @@ p {
 	float: right;
 }
 
-#password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header, #share-header, #maps-header {
+#password-header, #color-header, #order-header, #search-header, #recent-ips-header, #theme-header, #maps-header {
 	cursor: pointer;
 }
 
